versioned_docs/version-3.11/scalardb-cluster-dotnet-client-sdk/getting-started-with-admin-api.mdx
---
tags:
  - Enterprise Standard
  - Enterprise Premium
---

# Getting Started with the Administrative API in the ScalarDB Cluster .NET Client SDK

The ScalarDB Cluster .NET Client SDK supports the Administrative API of ScalarDB Cluster. By using this API, you can manage ScalarDB Cluster from .NET applications.

:::note

Although we recommend using asynchronous methods as in the following examples, you can use synchronous methods instead.

:::

## Get a transaction manager

First, you need to get an object for interacting with the Administrative API. To get the object, you can use `TransactionFactory` as follows, replacing `<HOSTNAME_OR_IP_ADDRESS>` with the FQDN or the IP address, and `<PORT>` with the port number (`60053` by default) of your cluster:

```c#
var scalarDbOptions = new ScalarDbOptions
                      {
                         Address = "http://<HOSTNAME_OR_IP_ADDRESS>:<PORT>",
                         HopLimit = 10
                      };
var factory = TransactionFactory.Create(scalarDbOptions);

using var admin = factory.GetTransactionAdmin();
```

## Manage ScalarDB Cluster

The following operations can be performed by using the ScalarDB Cluster .NET Client SDK.

### Create a new namespace

```c#
await admin.CreateNamespaceAsync("ns", ifNotExists: true);
```

### Drop a namespace

```c#
await admin.DropNamespaceAsync("ns", ifExists: true);
```

### Check if a namespace exists

```c#
var namespaceExists = await admin.IsNamespacePresentAsync("ns");
```

### Create a new table

```c#
using Scalar.Db.Cluster.Rpc.V1;
// ...
using ScalarDB.Net.Client.Builders;

// ...

var tableMetadata =
    new TableMetadataBuilder()
        .AddPartitionKey("pk", DataType.Int)
        .AddClusteringKey("ck", DataType.Double)
        .AddSecondaryIndex("index", DataType.Float)
        .AddColumn("ordinary", DataType.Text)
        .Build();

await admin.CreateTableAsync("ns", "table_name", tableMetadata, ifNotExists: true);
```

### Drop a table

```c#
await admin.DropTableAsync("ns", "table_name", ifExists: true);
```

### Checking if a table exists

```c#
var tableExists = await admin.IsTablePresentAsync("ns", "table_name");
```

### Get the names of existing tables

```c#
var tablesList = await admin.GetTableNamesAsync("ns");
```

### Create the Coordinator table

```c#
await admin.CreateCoordinatorTablesAsync();
```

### Drop the Coordinator table

```c#
await admin.DropCoordinatorTablesAsync();
```

### Check if the Coordinator table exist

```c#
var exists = await admin.AreCoordinatorTablesPresentAsync();
```
